@@ -3,6 +3,8 @@ git-annex (5.20140108) UNRELEASED; urgency=medium
   * Added tahoe special remote.
   * external special remote protocol: Added GETGITDIR, and GETAVAILABILITY.
   * Android: Avoid passing --clobber to busybox wget.
+  * Refuse to build with git older than 1.7.1.1, which is needed for
+    git checkout -B
 
  -- Joey Hess <joeyh@debian.org>  Wed, 08 Jan 2014 13:13:54 -0400
 
